--- a/src/styles/lobby.css
+++ b/src/styles/lobby.css
@@ -1,14 +1,3 @@
-/*
-#lobby {
-    background-color: var(--background-color);
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: var(--text-color);
-}
-*/
 #lobby {
     height: 100vh;
     flex-grow: 1;
@@ -120,7 +109,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 #lobby #players > div:last-child > span {
@@ -136,63 +125,3 @@
 #lobby #lobby-buttons-container #startBtn {
     margin-left: 30px;
 }
-
-/*
-.lobby-buttons {
-    width: 90%;
-    flex-basis: 120px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.lobby-buttons button {
-    letter-spacing: .5px;
-    font-family: var(--font-primary);
-    font-weight: 600;
-    font-size: 20px;
-    height: 50px;
-    padding: 10px 5px;
-    width: 145px;
-    border-radius: 60px;
-    -webkit-border-radius: 60px;
-    -moz-border-radius: 60px;
-    -ms-border-radius: 60px;
-    -o-border-radius: 60px;
-    background-color: transparent;
-    border: none;
-    color: var(--text-color);
-    transition: background-color .2s ease-out;
-    -webkit-transition: background-color .2s ease-out;
-    -moz-transition: background-color .2s ease-out;
-    -ms-transition: background-color .2s ease-out;
-    -o-transition: background-color .2s ease-out;
-}
-
-.lobby-buttons button:hover {
-    cursor: pointer;
-}
-*/
-
-/*
-#startBtn {
-    color: var(--logo-color);
-    background-color: #f4f4f4;
-    border-color: transparent;
-}
-
-#startBtn:hover, #startBtn:active {
-    background-color: #ffffffc9;
-}
-*/
-
-/*
-#quit {
-    color: #f4f4f4;
-    border: 2px solid #f4f4f4;
-}
-
-#quit:hover, #quit:active {
-    background-color: #2c2e33;
-}
-*/
