--- a/src/styles/play.css
+++ b/src/styles/play.css
@@ -204,6 +204,8 @@
   text-align: center;
   padding: 0 15px;
   transition: background-color 120ms ease;
+  text-shadow: 0 0 10px #fff;
+  font-weight: bold;
 }
 
 #play-view #racks .overlay.no-racks {
