--- a/src/styles/plan.css
+++ b/src/styles/plan.css
@@ -1,17 +1,44 @@
 #plan-view {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-image: url(../../assets/background.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center top;
+  flex-grow: 1;
   height: 100vh;
-  width: 100vw;
+  background-image: url('/assets/background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: -126px;
+  padding: 0 10px;
+  background-color: #151824; /* same as image */
   color: var(--text-color);
-  font-family: var(--font-primary);
-  font-size: 0.9rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#plan-view #teams {
+  display: flex;  
+  justify-content: center;
+  gap: 15px;
+  padding: 15px 0;
+}
+
+#plan-view .team {
+  max-width: 75px;
+  flex-basis: 75px;
+  box-sizing: border-box;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 8px;
+  border: 1px solid transparent;
+  box-shadow: 0 0 5px 2px transparent,
+        inset 0 0 5px 2px transparent;
+  transition: box-shadow 120ms ease;
+}
+
+#plan-view .score {
+  color: #000;
+  text-align: center;
+  font-family: var(--font-mono);
+  padding-left: 10px;
 }
 
 #plan-view #controlPanel {
@@ -62,6 +89,19 @@
 }
 
 #plan-view #timer {
+  margin-top: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column: 2; 
+  grid-row: 1;
+  font-size: 21px;
+  font-family: var(--font-mono);
+  color: var(--your-team-color);
+}
+
+/*
+#plan-view #timer {
   margin-top: 3%;
   font-family: var(--font-mono);
   font-size: 16px;
@@ -73,19 +113,30 @@
   text-align: center;
   border-radius: 5px;
 }
+*/
 
-#plan-view #actionsExplainer {
-  margin-top: 8%;
+#plan-view #available-actions {
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 15px 0 5px 0;
+}
+
+#plan-view #your-actions {
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 10px 0 5px 0;
 }
 
 #plan-view #actions {
-  border: 1px solid transparent; /* Color set in JS */
+  border: 1px solid var(--your-team-color);
   border-radius: 10px;
   flex-grow: 1;
-  width: 90vw;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 25%;
   gap: 5px;
   overflow-y: scroll;
   padding: 5px;
@@ -113,23 +164,20 @@
 
 #plan-view .cooldown {
   font-family: var(--font-mono);
+  font-size: 14px;
 }
 
 #plan-view #player-actions {
-  flex-basis: 6%;
-  margin-bottom: 2%;
-
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--your-team-color);
   border-radius: 10px;
   padding: 5px;
-  width: 90vw;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 5px;
+  margin-bottom: 10px;
 }
 
 #plan-view #player-actions > div {
-  border: 1px solid var(--text-color);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -137,13 +185,10 @@
   text-align: center;
   justify-content: center;
   padding: 5px;
-  background-color: var(--game-action-on-cooldown-color);
+  background-color: #fff;
+  color: #000;
 }
 
 #plan-view #player-actions > div > p {
   margin: 0px;
-}
-
-#plan-view #actions, #player-actions {
-  margin-top: 2%;
 }
