--- a/src/styles/plan.css
+++ b/src/styles/plan.css
@@ -35,8 +35,8 @@
 }
 
 #plan-view .team.your-team {
-  border-color: #fff;
-  box-shadow: 0 0 5px 2px #fff;
+  border-color: var(--your-team-color);
+  box-shadow: 0 0 5px 2px var(--your-team-color);
 }
 
 #plan-view .score {
@@ -145,6 +145,7 @@
   gap: 5px;
   overflow-y: scroll;
   padding: 5px;
+  box-shadow: 0 0 5px 2px var(--your-team-color);
 }
 
 #plan-view .availableAction {
@@ -180,6 +181,7 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 5px;
   margin-bottom: 10px;
+  box-shadow: 0 0 5px 2px var(--your-team-color);
 }
 
 #plan-view #player-actions > div {
