--- a/src/styles/plan.css
+++ b/src/styles/plan.css
@@ -15,7 +15,7 @@
 
 #plan-view #teams {
   display: flex;  
-  justify-content: center;
+  justify-content: space-around;
   gap: 15px;
   padding: 15px 0;
 }
