--- a/src/styles/play.css
+++ b/src/styles/play.css
@@ -12,7 +12,7 @@
 
 #play-view #teams {
   display: flex;  
-  justify-content: center;
+  justify-content: space-around;
   gap: 15px;
   padding: 15px 0;
 }
