--- a/src/styles/play.css
+++ b/src/styles/play.css
@@ -1,20 +1,25 @@
 #play-view {
   flex-grow: 1;
   height: 100vh;
-  background-image: url('/assets/background.png');
+  background-image: url('/assets/background-lines.png');
   background-color: #151824; /* same as image */
   /* background-color: var(--background-color); */
-  background-size: cover;
   background-repeat: no-repeat;
   background-position-x: center;
-  background-position-y: -126px;
+  background-position-y: -20px;
   padding: 0 10px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 #play-view #teams {
   display: flex;  
   justify-content: space-around;
-  padding: 15px 0;
+  align-items: center;
+  /* padding: 10px 0 10px 0; */
+
+  flex: 1 1 0;
 }
 
 #play-view .team {
@@ -27,7 +32,7 @@
   box-shadow: 0 0 5px 2px transparent,
         inset 0 0 5px 2px transparent;
   transition: box-shadow 120ms ease;
-  padding: 2px;
+  padding: 4px 2px;
   margin-right: 10px;
 }
 
@@ -47,6 +52,20 @@
 #play-view .team.team-4 svg {
   fill: var(--team-color-4);
 }
+
+#play-view .team.team-1.scored {
+  box-shadow: 0 0 5px 2px var(--team-color-1);
+}
+#play-view .team.team-2.scored {
+  box-shadow: 0 0 5px 2px var(--team-color-2);
+}
+#play-view .team.team-3.scored {
+  box-shadow: 0 0 5px 2px var(--team-color-3);
+}
+#play-view .team.team-4.scored {
+  box-shadow: 0 0 5px 2px var(--team-color-4);
+}
+
 
 #play-view .team.selectable {
   border-color: #fff;
@@ -80,11 +99,17 @@
 }
 
 #play-view #stations {
+  margin-top: 8px;
+  flex: 1 1 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 28px;
   gap: 5px;
+  /*
   margin-bottom: 5px;
+  grid-auto-rows: 28px;
+  */
+  /* grid-template-rows: 30px repeat(6, 26px); */
+  margin-bottom: 8px;
 }
 
 #play-view #stations #timer {
@@ -96,14 +121,20 @@
   font-size: 21px;
   font-family: var(--font-mono);
   color: var(--your-team-color);
-  text-shadow: 0 2px 2px #000;
+  text-shadow: 1px 2px 1px #000;
+
+  background-color: #151824;
+  padding: 5px 10px;
+  border-radius: 6px;
+  box-shadow: 0 0 6px 3px var(--your-team-color-alpha);
 }
 
 #play-view .station {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 10px 5px 10px;
+  /* padding: 10px 10px 5px 10px; */
+  padding: 8px 10px 0px 10px;
   grid-row: span 3;
   border: 1px solid transparent;
   box-shadow: 0 0 5px 2px transparent,
@@ -155,6 +186,7 @@
 */
 
 #play-view .station img {
+  /* max-width: 50px; */
   max-width: 50px;
 }
 
@@ -168,17 +200,34 @@
 }
 
 #play-view #racks {
+  flex: 1 1 0;
   display: grid;
-  align-content: end;
   position: relative;
+  /*
   grid-auto-rows: 58px;
   min-height: 230px;
+  */
 }
 
 #play-view .rack {
   display: flex;
   transition: opacity 120ms ease, gap 120ms ease;
   margin-bottom: 2px;
+  box-shadow: 0 0 10px 4px transparent;
+  transition: box-shadow 400ms ease;
+}
+
+#play-view .rack.team-1.scored {
+  box-shadow: 0 0 10px 4px var(--team-color-1);
+}
+#play-view .rack.team-2.scored {
+  box-shadow: 0 0 10px 4px var(--team-color-2);
+}
+#play-view .rack.team-3.scored {
+  box-shadow: 0 0 10px 4px var(--team-color-3);
+}
+#play-view .rack.team-4.scored {
+  box-shadow: 0 0 10px 4px var(--team-color-4);
 }
 
 #play-view .rack.other-team {
@@ -229,6 +278,7 @@
 #play-view .rack.other-team.selectable .slot {
   border-radius: 0;
   margin-right: 0;
+  padding: 3px 4px;
 }
 
 #play-view .rack.your-rack.not-selectable {
@@ -256,7 +306,8 @@
 }
 
 #play-view .slot .token img {
-  max-width: 45px;
+  /* max-width: 45px; */
+  max-width: 100%;
 }
 
 #play-view #racks .overlay {
@@ -265,6 +316,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 10;
   background-color: rgba(255, 255, 255, 0.98);
   color: #000;
   font-size: 21px;
@@ -280,12 +332,14 @@
 }
 
 #play-view #racks .overlay.no-racks {
-  background: rgba(255, 255, 255, 0.4);
+  /* background: rgba(255, 255, 255, 0.4); */
 }
 
 #play-view #bottom {
   display: flex;
   padding-top: 4px;
+
+  flex: 1 1 0;
 }
 
 #play-view #actions {
@@ -455,17 +509,19 @@
 }
 
 #play-view #misc {
+  flex: 1 1 0;
   display: flex;
   justify-content: flex-end;
+  padding: 8px 0;
 }
 
 #play-view #menu {
   align-self: flex-end;
   border: 0;
-  border-radius: 10px;
-  padding: 5px 29px;
-  margin-top: 5px;
+  border-radius: 8px;
+  padding: 5px 31px;
   background: #fff;
+  font-size: 13px;
 }
 
 /*
@@ -547,3 +603,36 @@
   cursor: pointer;
 }
 */
+
+@media screen and (max-width: 340px) {
+  #play-view #teams .team .score {
+    font-size: 14px;
+  }
+
+  #play-view #stations .station .name {
+    font-size: 14px;
+  }
+
+  #play-view #stations #timer {
+    font-size: 18px;
+  }
+
+  #play-view .action .name {
+    font-size: 13px;
+  }
+
+  /*
+  #play-view .station img {
+    max-width: 45px;
+  }
+
+  #play-view .slot .token img {
+    max-width: 100%;
+  }
+
+  #play-view #racks {
+    grid-auto-rows: initial;
+    min-height: initial;
+  }
+  */
+}
