--- a/src/styles/plan.css
+++ b/src/styles/plan.css
@@ -4,7 +4,8 @@
   background-image: url('/assets/background-lines.png');
   background-repeat: no-repeat;
   background-position-x: center;
-  background-position-y: -15px;
+  background-position-y: top;
+  background-size: cover;
   padding: 0 10px;
   background-color: #151824; /* same as image */
   color: var(--text-color);
