--- a/src/styles/play.css
+++ b/src/styles/play.css
@@ -6,7 +6,8 @@
   /* background-color: var(--background-color); */
   background-repeat: no-repeat;
   background-position-x: center;
-  background-position-y: -20px;
+  background-position-y: top;
+  background-size: cover;
   padding: 0 10px;
 
   display: flex;
@@ -201,7 +202,6 @@
 
 #play-view #racks {
   flex: 1 1 0;
-  display: grid;
   position: relative;
   /*
   grid-auto-rows: 58px;
