Meteor shower action update
Meteor shower action done.  If player reload page the effect is not there. But I added (and removed) a prop in the game.teams object which we could use for that. I just don't know where to put that logic to make it work.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -79,7 +79,7 @@ body {
 }
 
 .meteor-shower {
-    animation: meteor-shower 5s linear infinite;
+    animation: meteor-shower linear infinite;
     position: absolute;
     transition: all 30ms linear;
 }
